# rr_mounter

./: Cargo.toml  readme.md
cli/: Cargo.toml
extensions/: Cargo.toml
extensions/src/: main.rs
extensions/src/mangadex/: factory.rs
resolver/: Cargo.toml
src/: error.rs  lib.rs  utils.rs
src/base/: badge.rs  home_section.rs  mod.rs  search.rs  setting.rs  source.rs  source_info.rs
src/generate/: chapter.rs  series.rs
toolchain/: Cargo.toml
types/: Cargo.toml
types/src/: lib.rs  main.rs
types/src/base/: badge.rs  home_section.rs  lang.rs  mod.rs  setting.rs  source_info.rs
types/src/generate/: chapter.rs  manga.rs  mod.rs  tags.rs
