[package]
name = "rrmounter"
version = "0.2.2"
edition = "2024"

authors = ["NotreallYuri yurivgr@icloud.com"]
description = "A Rust library for creating extensions for my RR Reader project, a modular manga reader."
license = "MIT"
repository = "https://github.com/RR-Reader/mounter"
readme = "README.md"

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
chrono = "0.4.41"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
